change gc to zgc garbage collector