@@ -800,8 +800,11 @@
                                         <option>-Dorg.apache.commons.lang3.SystemUtils.JAVA_SPECIFICATION_VERSION=17</option>
                                         <option>-Djogamp.gluegen.UseTempJarCache=true</option>
                                         <option>-Djava.net.useSystemProxies=true</option>
-                                        <option>-Xmx2g</option>
-                                        <option>-XX:+UseG1GC</option>
+                                        <option>-Xms2g</option>
+                                        <option>-Xmx20g</option>
+                                        <option>-XX:+UseZGC</option>
+                                        <option>-XX:MaxGCPauseMillis=200</option>
+                                        <option>-XX:+UseStringDeduplication</option>
                                         <option>--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>
                                         <option>--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED</option>
                                         <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>
@@ -850,8 +853,11 @@
                                         <option>-Dorg.apache.commons.lang3.SystemUtils.JAVA_SPECIFICATION_VERSION=17</option>
                                         <option>-Djogamp.gluegen.UseTempJarCache=true</option>
                                         <option>-Djava.net.useSystemProxies=true</option>
-                                        <option>-Xmx2g</option>
-                                        <option>-XX:+UseG1GC</option>
+                                        <option>-Xms2g</option>
+                                        <option>-Xmx20g</option>
+                                        <option>-XX:+UseZGC</option>
+                                        <option>-XX:MaxGCPauseMillis=200</option>
+                                        <option>-XX:+UseStringDeduplication</option>
                                         <option>-Xdebug</option>
                                         <option>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005</option>
                                         <option>--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>
